css/footer.css
:root {
  /** colors **/
  --gym-orange: #f8971d;
  --gym-black: #222222;
  --gym-white: #ffffff;
  --gym-gray: #cccccc;
  --gym-dark-gray: #444444;
  --gym-light-gray: #a6a6a6;
  --gym-light-page-background: #ebebeb;

  /** typefaces */
  --gym-font-stack: brandon-grotesque, 'Helvetica Neue', Helvetica, sans-serif;
  --gym-font-stack-text: 'Helvetica Neue', Helvetica, sans-serif;
}

#contentinfo {
  min-height: 170px;
  font-size: 16px;
  color: var(--gym-white);
  background-color: var(--gym-black);
  padding: 5px 10px 30px 10px;
  margin: 0 auto;
}

#contentinfo h2 {
  font-family: var(--gym-font-stack);
  font-size: 1em;
  margin-top: 0;
  margin-bottom: 0;
}

#contentinfo .all-caps {
  text-transform: uppercase;
}

#contentinfo .gym-brand {
  margin-bottom: 1em;
}

#contentinfo .gymnasium-logo {
  width: 12.5em;
  height: auto;
  margin-top: 0;
  margin-left: 0;
}

#contentinfo .gym-brand p {
  width: 95%;
  font-size: 1em;
  line-height: 1.55;
  margin-top: 1.2em;
}

#contentinfo .resources {
  clear: left;
}

@media (min-width: 62em) {
  #contentinfo .resources {
    clear: none;
  }
}

#contentinfo .footer-link-list {
  padding-top: 0.625em;
  margin-top: 0;
  margin-bottom: 1.2em;
}

#contentinfo ul {
  list-style: none url();
  padding-left: 0;
  margin-top: 0.95em;
}

#contentinfo li {
  height: auto;
  padding-right: 0;
  border-right: 0;
  margin-top: 0.4em;
}

#contentinfo li a {
  color: var(--gym-white);
}

#contentinfo a:hover,
#contentinfo a:focus,
#contentinfo a:active {
  color: var(--gym-orange);
  border-bottom: 0;
}

#contentinfo .open-edx-logo {
  width: 8.5em;
  height: auto;
}

#contentinfo .copyright {
  text-align: left;
}

#contentinfo .copyright small {
  font-size: 80%;
}

